			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

16-Jul-2004
~~~~~~~~~~~
Removed action window screenshot from manual to save space.

15-Jul-2004
~~~~~~~~~~~
Proper check for the stat[v]fs headers (Stephen Watson, reported by
Lucas Hazel).

13-Jul-2004
~~~~~~~~~~~
Added firefox to list of default browsers (suggested by eugene).

10-Jul-2004
~~~~~~~~~~~
Added Romanian translation (Cosma Florin).

01-Jul-2004
~~~~~~~~~~~
Can now set "Brief" option on the Copy and Move action windows (Stephen 
Watson).
Properties window handles mount points specially when calculating their size
(Stephen Watson).

30-Jun-2004
~~~~~~~~~~~
Bugfix: On Linux, the filer called setxattr instead of getxattr, thus
	preventing setting filetypes with extended attributes from working.
Bugfix: Copy and Move now obey the "Brief" option (Stephen Watson, reported
        by Graham Borland)

29-Jun-2004
~~~~~~~~~~~
Bugfix: On multi-monitor setups, filer windows always opened on the top/left
	monitor (reported by Kacper Wysocki). Now they open on the monitor
	under the pointer.

27-Jun-2004
~~~~~~~~~~~
Icons of minimized windows remember their positions on the pinboard (Stephen 
Watson).
Filer now officially requires GTK 2.2.0 or later (wasn't working with 2.0
anyway, and noone had complained).
Bugfix: A race in the code for updating iconified window titles could cause
	the filer to crash with a BadWindow error.

26-Jun-2004
~~~~~~~~~~~
Another Properties window fix: if there is no output from the du command
then put a message indicating an error (Stephen Watson).
Can now compile without Xinerama support on GTK+ < 2.2.0 (Tony Houghton).

23-Jun-2004
~~~~~~~~~~~
Let the panel autoscroll during a drag (Stephen Watson).

18-Jun-2004
~~~~~~~~~~~
Fix another bug when closing Properties window before it has finished
scanning the directory (Stephen Watson).

09-Jun-2004
~~~~~~~~~~~
Improved Xinerama support: now works for tooltips and action windows; filer