@@ -2,6 +2,13 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+21-Jul-2004
+~~~~~~~~~~~
+Changed email address given as the one to send bugs to when using
+--help to the rox-devel list (Stephen Watson).
+Thumbnail generation now handles files with UTF-8 characters (Anatoly
+Asviyan). 
+
 16-Jul-2004
 ~~~~~~~~~~~
 Removed action window screenshot from manual to save space.
